Partially finished adding personal details

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,23 +1,26 @@
 <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="intro">
-                    <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
+                    <p>...</p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span>
-                    
+                    <span class="project-title"><a href="#hook">Advanced MIPS Simulator</a></span> - <span class="project-tagline">Developed with a team of 3, an advanced MIPS piplined CPU simulator using C++ and Qt.</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="#" target="_blank">DevStudio</a></span> - 
-                    <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>
+                    <span class="project-title"><a href="#" target="_blank">Distrbuted Image Viewer</a></span> - 
+                    <span class="project-tagline">Developed with a team of 3, distributed systems project that enables users in different machines to send encrypted images to each other with fixed number of views and access privileges using C++ and Qt.</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="#" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span>
+                    <span class="project-title"><a href="#" target="_blank">Word2Web</a></span> - 
+                    <span class="project-tagline">Developed with a team of 2, a Perl application that takes a word document (.docx) and parses the main elements to generate the corresponding .HTML and .CSS files.</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="#" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span>
+                    <span class="project-title"><a href="#" target="_blank">Pong and Breakout Game</a></span> - <span class="project-tagline">Developed with a teammate, Pong and Breakout Game Console with Multiplayer and simple AI coded in Verilog, used FPGA Basys2 board, and 2 PmodJSTK (Joysticks).</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="#" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span>
+                    <span class="project-title"><a href="#" target="_blank">Arm-Tracker</a></span> - <span class="project-tagline">Developed with a teammate, a program that detects human's arm, draws convex hull around it, and keeps tracking it using C++ and OpenCV 2.4.</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="#" target="_blank">Etbara3</a></span> - <span class="project-tagline">Developed with a team of 2, an Android App that enables users to donate money/clothes or volunteer to charity events added by charity orginaization manager (admin).</span>
                 </div><!--//item-->
             </section><!--//section-->
