--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,6 +1,8 @@
 <section class="section summary-section">
 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
 <div class="summary">
-    <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+    <p>-I'm a Computer Engineering student who is fond of Computer Graphics, Web Development, and Mobile Applications Development. 
+    -I'm very passionate about writing and coding. The ideology itself of just having a piece of paper and a pen right in front of you, and you get to write whatever you think of or believe in, paving the way for new ideas to be discovered. 
+    -Currently seeking an internship opportunity in order to gain hands on experience to build upon and utilize my academic background, and communication skills.</p>
 </div><!--//summary-->
 </section><!--//section-->
