Almost done adding all personal information on website

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -4,7 +4,7 @@
                     <div class="item">
                         <h3 class="level-title">C/C++</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
+                            <div class="level-bar-inner" data-level="98%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -12,7 +12,7 @@
                     <div class="item">
                         <h3 class="level-title">Python</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
+                            <div class="level-bar-inner" data-level="98%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -20,7 +20,7 @@
                     <div class="item">
                         <h3 class="level-title">HTML5 &amp; CSS &amp; Javascript</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
+                            <div class="level-bar-inner" data-level="98%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -28,7 +28,7 @@
                     <div class="item">
                         <h3 class="level-title">NodeJS and Django frameworks</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
+                            <div class="level-bar-inner" data-level="98%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -36,7 +36,7 @@
                     <div class="item">
                         <h3 class="level-title">Android Development</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
+                            <div class="level-bar-inner" data-level="90%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -48,6 +48,15 @@
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Research and Writing</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner"
+                            data-level="95%">
+                            </div>
+                        </div> <!-- //level-bar -->
+                    </div><!-- //item -->
                     
                 </div>  
             </section><!--//skills-section-->
