--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,4 +3,5 @@
 <ul class="list-unstyled interests-list">
 <a target="_blank" href="https://www.youtube.com/watch?v=Jnmj1dXDbNk"><li>How to use?</li></a>
 </ul>
-</div><!--//About--> -->
+</div> -->
+<!-- //About--> 
