--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,8 +1,9 @@
 <div class="interests-container container-block">
 <h2 class="container-block-title">Interests</h2>
 <ul class="list-unstyled interests-list">
-<li>.</li>
-<li>.</li>
-<li>.</li>
+<li>Gaming or anything close to it</li>
+<li>Travelling and meeting new people</li>
+<li>Music</li>
+<li>Reading</li>
 </ul>
 </div><!--//interests-->
