Updated sidebar layout

--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,8 +1,8 @@
 <div class="interests-container container-block">
 <h2 class="container-block-title">Interests</h2>
 <ul class="list-unstyled interests-list">
-<li>Gaming or anything close to it</li>
-<li>Travelling and meeting new people</li>
+<li>Gaming of any sort</li>
+<li>Travelling</li>
 <li>Music</li>
 <li>Reading</li>
 </ul>
