Removed the ..., adjusted the sidebar, and fixed naming in yml file. Missing links to projects.

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,8 +1,8 @@
  <div class="education-container container-block">
 <h2 class="container-block-title">Education</h2>
 <div class="item">
-    <h4 class="degree">BSc in Computer Eng.</h4>
-    <h5 class="meta">The American University in Cairo</h5>
+    <h4 class="degree">BSc in Computer Engineering. Minor in BA</h4>
+    <h5 class="meta">The American University in Cairo (AUC)</h5>
     <div class="time">2012 - 2017 (Expected to graduate)</div>
 </div><!--//item-->
 <!-- <div class="item">
