--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,8 +1,8 @@
 <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
-                <div class="intro">
+                <!--<div class="intro">
                     <p>...</p>
-                </div><!--//intro-->
+                </div>--><!--//intro ( not needed now )-->
                 <div class="item">
                     <span class="project-title"><a href="#hook">Advanced MIPS Simulator</a></span> - <span class="project-tagline">Developed with a team of 3, an advanced MIPS piplined CPU simulator using C++ and Qt.</span>
                 </div><!--//item-->
