--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,21 +4,21 @@
                     <p>...</p>
                 </div>--><!--//intro ( not needed now )-->
                 <div class="item">
-                    <span class="project-title"><a href="#https://github.com/ShadyF/Advanced_Pipelined_MIPS_Simulator-CS330">Advanced MIPS Simulator</a></span> - <span class="project-tagline">Developed with a team of 3, an advanced MIPS piplined CPU simulator using C++ and Qt.</span>
+                    <span class="project-title"><link rel="stylesheet" type="text/css" href="https://github.com/ShadyF/Advanced_Pipelined_MIPS_Simulator-CS330">Advanced MIPS Simulator</span> - <span class="project-tagline">Developed with a team of 3, an advanced MIPS piplined CPU simulator using C++ and Qt.</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="#https://github.com/ShehabCE/Distributed-Systems" target="_blank">Distrbuted Image Viewer</a></span> - 
+                    <span class="project-title"><link rel="stylesheet" type="text/css" href="https://github.com/ShehabCE/Distributed-Systems">Distrbuted Image Viewer</span> - 
                     <span class="project-tagline">Developed with a team of 3, distributed systems project that enables users in different machines to send encrypted images to each other with fixed number of views and access privileges using C++ and Qt.</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="#https://github.com/ShehabCE/WordToWeb" target="_blank">Word2Web</a></span> - 
+                    <span class="project-title"><link rel="stylesheet" type="text/css" href="https://github.com/ShehabCE/WordToWeb">Word2Web</span> - 
                     <span class="project-tagline">Developed with a team of 2, a Perl application that takes a word document (.docx) and parses the main elements to generate the corresponding .HTML and .CSS files.</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="#https://github.com/ShehabCE/Mini-Game-Console" target="_blank">Pong and Breakout Game</a></span> - <span class="project-tagline">Developed with a teammate, Pong and Breakout Game Console with Multiplayer and simple AI coded in Verilog, used FPGA Basys2 board, and 2 PmodJSTK (Joysticks).</span>
+                    <span class="project-title"><link rel="stylesheet" type="text/css" href="https://github.com/ShehabCE/Mini-Game-Console">Pong and Breakout Game</span> - <span class="project-tagline">Developed with a teammate, Pong and Breakout Game Console with Multiplayer and simple AI coded in Verilog, used FPGA Basys2 board, and 2 PmodJSTK (Joysticks).</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="#https://github.com/ShehabCE/Arm-Tracker" target="_blank">Arm-Tracker</a></span> - <span class="project-tagline">Developed with a teammate, a program that detects human's arm, draws convex hull around it, and keeps tracking it using C++ and OpenCV 2.4.</span>
+                    <span class="project-title"><link rel="stylesheet" type="text/css" href="https://github.com/ShehabCE/Arm-Tracker">Arm-Tracker</span> - <span class="project-tagline">Developed with a teammate, a program that detects human's arm, draws convex hull around it, and keeps tracking it using C++ and OpenCV 2.4.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="#" target="_blank">Etbara3</a></span> - <span class="project-tagline">Developed with a team of 2, an Android App that enables users to donate money/clothes or volunteer to charity events added by charity orginaization manager (admin).</span>
