--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -12,13 +12,13 @@
                     <div class="item">
                         <h3 class="level-title">Python</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
+                            <div class="level-bar-inner" data-level="88%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
                     
                     <div class="item">
-                        <h3 class="level-title">HTML5 &amp; CSS &amp; Javascript</h3>
+                        <h3 class="level-title">HTML5, CSS &amp; Javascript</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="98%">
                             </div>                                      
@@ -26,7 +26,7 @@
                     </div><!--//item-->
                     
                     <div class="item">
-                        <h3 class="level-title">NodeJS and Django frameworks</h3>
+                        <h3 class="level-title">Node.JS &amp; Bootstrap frameworks</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="98%">
                             </div>                                      
@@ -34,26 +34,49 @@
                     </div><!--//item-->
                     
                     <div class="item">
-                        <h3 class="level-title">Android Development</h3>
+                        <h3 class="level-title">Django framework</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
-                            </div>                                      
-                        </div><!--//level-bar-->                                 
-                    </div><!--//item-->
-                    
-                    <div class="item">
-                        <h3 class="level-title">Linux and git</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
+                            <div class="level-bar-inner" data-level="78%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Research and Writing</h3>
+                        <h3 class="level-title">MySQL &amp; SQLite</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner"
-                            data-level="95%">
+                            <div class="level-bar-inner" data-level="88%">
+                            </div>                                      
+                        </div><!--//level-bar-->                                 
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Android Development</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="88%">
+                            </div>                                      
+                        </div><!--//level-bar-->                                 
+                    </div><!--//item-->
+                    
+                    <div class="item">
+                        <h3 class="level-title">Development with Linux &amp; git</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="98%">
+                            </div>                                      
+                        </div><!--//level-bar-->                                 
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Development Tools; WebStorm, PyCharm, Clion, Visual Studio &amp; Xcode</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="98%">
+                            </div>                                      
+                        </div><!--//level-bar-->                                 
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Research &amp; Writing</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="88%">
                             </div>
                         </div> <!-- //level-bar -->
                     </div><!-- //item -->
