--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -2,7 +2,7 @@
 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
 <div class="summary">
     <p>Hey Hey!</p>
-    <p> My name is Shehab Mohamed, I'm a Computer Eng. student (With Business Administration Minor) who is few months away from graduation at AUC. I'm a self-taught developer who is always eager to learn new technologies and passionate about writing and reading. I always try to learn something useful in any sort throughout the day, whether its coding a new project, writing a new paper, or reading an interesting book. My favourite ideology is that, you have a piece of paper and a pen right in front of you, you get to write whatever you think of or believe in, and as simple as that, paving the way for new ideas or creativity to be discovered.</p>
+    <p> My name is Shehab Mohamed, I'm a Computer Eng. student (Minoring in BA) who is few months away from graduation at AUC. I'm a self-taught developer who is always eager to learn new technologies and passionate about writing and reading. I always try to learn something useful in any sort throughout the day, whether its coding a new project, writing a new paper, or reading an interesting book. My favourite ideology is that, you have a piece of paper and a pen right in front of you, you get to write whatever you think of or believe in, and as simple as that, paving the way for new ideas or creativity to be discovered.</p>
     <p>As for my status, I am currently seeking an internship opportunity in order to gain hands on experience to build upon and utilize my academic background, and communication skills</p>
 </div><!--//summary-->
 </section><!--//section-->
