Adjusted skills file

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -4,7 +4,7 @@
                     <div class="item">
                         <h3 class="level-title">C/C++</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
+                            <div class="level-bar-inner" data-level="95%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -12,7 +12,7 @@
                     <div class="item">
                         <h3 class="level-title">Python</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
+                            <div class="level-bar-inner" data-level="95%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -20,7 +20,7 @@
                     <div class="item">
                         <h3 class="level-title">HTML5, CSS &amp; Javascript</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
+                            <div class="level-bar-inner" data-level="95%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -28,7 +28,7 @@
                     <div class="item">
                         <h3 class="level-title">Node.JS &amp; Bootstrap frameworks</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
+                            <div class="level-bar-inner" data-level="95%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -36,7 +36,7 @@
                     <div class="item">
                         <h3 class="level-title">Django framework</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="78%">
+                            <div class="level-bar-inner" data-level="75%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -44,7 +44,7 @@
                     <div class="item">
                         <h3 class="level-title">MySQL &amp; SQLite</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="88%">
+                            <div class="level-bar-inner" data-level="85%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -52,7 +52,7 @@
                     <div class="item">
                         <h3 class="level-title">Android Development</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="88%">
+                            <div class="level-bar-inner" data-level="85%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -60,7 +60,7 @@
                     <div class="item">
                         <h3 class="level-title">Development with Linux &amp; git</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
+                            <div class="level-bar-inner" data-level="95%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -68,7 +68,7 @@
                     <div class="item">
                         <h3 class="level-title">Development Tools; WebStorm, PyCharm, Clion, Visual Studio &amp; Xcode</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
+                            <div class="level-bar-inner" data-level="95%">
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
@@ -76,10 +76,18 @@
                     <div class="item">
                         <h3 class="level-title">Research &amp; Writing</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="88%">
+                            <div class="level-bar-inner" data-level="85%">
                             </div>
                         </div> <!-- //level-bar -->
                     </div><!-- //item -->
+
+                    <div class="item">
+                        <h3 class="level-title">Project Management</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="95%">
+                            </div>
+                        </div> <!-- //level-bar -->
+                    </div><!-- //item -->                    
                     
                 </div>  
             </section><!--//skills-section-->
