Added Thesis description

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,6 +4,9 @@
                     <p>...</p>
                 </div>--><!--//intro ( not needed now )-->
                 <div class="item">
+                    <span class="project-title"><a href="#" target="_blank"><strong>Lumen | Thesis Project</strong></a></span> - <span class="project-tagline">A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.</span>
+                </div><!--//item-->
+                <div class="item">
                     <span class="project-title"><a href="https://github.com/ShadyF/Advanced_Pipelined_MIPS_Simulator-CS330" target="_blank">Advanced MIPS Simulator</a></span> - <span class="project-tagline">Developed with a team of 3, an advanced MIPS piplined CPU simulator using C++ and Qt.</span>
                 </div><!--//item-->
                 <div class="item">
