Added Kaggle description

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,13 +6,20 @@
                 <div class="item">
                     <span class="project-title"><a href="#" target="_blank"><strong>Lumen | Thesis Project</strong></a></span> - <span class="project-tagline">A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.</span>
                 </div><!--//item-->
+
                 <div class="item">
-                    <span class="project-title"><a href="https://github.com/ShadyF/Advanced_Pipelined_MIPS_Simulator-CS330" target="_blank">Advanced MIPS Simulator</a></span> - <span class="project-tagline">Developed with a team of 3, an advanced MIPS piplined CPU simulator using C++ and Qt.</span>
+                    <span class="project-title"><a href="#" target="_blank">Intel and MobileODT Cancer Screening Kaggle Competition </a></span> - <span class="project-tagline"> Currently participating in Kaggle competition with <strong>Amr Hesham</strong> on developing a machine learning algorithm that accurately identifies a cancerous infection type based on images to help identifying early stages of infection. <I>Team [Amr &amp; Shehab]. Current Rank is 32th of 527. Link to Competition [https://www.kaggle.com/c/intel-mobileodt-cervical-cancer-screening]</I></span>
                 </div><!--//item-->
+
                 <div class="item">
                     <span class="project-title"><a href="https://github.com/ShehabCE/Distributed-Systems" target="_blank">Distrbuted Image Viewer</a></span> - 
                     <span class="project-tagline">Developed with a team of 3, distributed systems project that enables users in different machines to send encrypted images to each other with fixed number of views and access privileges using C++ and Qt.</span>
                 </div><!--//item-->
+
+                <div class="item">
+                    <span class="project-title"><a href="https://github.com/ShadyF/Advanced_Pipelined_MIPS_Simulator-CS330" target="_blank">Advanced MIPS Simulator</a></span> - <span class="project-tagline">Developed with a team of 3, an advanced MIPS piplined CPU simulator using C++ and Qt.</span>
+                </div><!--//item-->
+
                 <div class="item">
                     <span class="project-title"><a href="https://github.com/ShehabCE/WordToWeb" target="_blank">Word2Web</a></span> - 
                     <span class="project-tagline">Developed with a team of 2, a Perl application that takes a word document (.docx) and parses the main elements to generate the corresponding .HTML and .CSS files.</span>
