--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,7 @@
                 </div><!--//item-->
 
                 <div class="item">
-                    <span class="project-title"><a href="#" target="_blank">Intel and MobileODT Cancer Screening Kaggle Competition </a></span> - <span class="project-tagline"> Currently participating in Kaggle competition with <strong>Amr Hesham</strong> on developing a machine learning algorithm that accurately identifies a cancerous infection type based on images to help identifying early stages of infection. <I>Team [Amr &amp; Shehab]. Current Rank is 32th of 527. Link to Competition [https://www.kaggle.com/c/intel-mobileodt-cervical-cancer-screening]</I></span>
+                    <span class="project-title"><a href="#" target="_blank">Intel and MobileODT Cancer Screening Kaggle Competition </a></span> - <span class="project-tagline"> Currently participating in Kaggle competition with <strong>Amr Hesham</strong> on developing a machine learning algorithm that accurately identifies a cancerous infection type based on images to help identifying early stages of infection. Team [Amr &amp; Shehab]. Current Rank is 32th of 527. <strong><a href="https://www.kaggle.com/c/intel-mobileodt-cervical-cancer-screening" target="_blank">Link to Competition</strong></a></span>
                 </div><!--//item-->
 
                 <div class="item">
