Added section under Extra-Curr

--- a/_includes/extra-curricular-activities.html
+++ b/_includes/extra-curricular-activities.html
@@ -56,5 +56,41 @@
                         </ul></p>  
                     </div><!--//details-->
                 </div><!--//item-->
-                
+
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">ACM-ECPC Participant</h3>
+                            <div class="time">2016</div>
+                        </div><!--//upper-row-->
+                    </div><!--//meta-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">HULT AUC Participant</h3>
+                            <div class="time">2016</div>
+                        </div><!--//upper-row-->
+                    </div><!--//meta-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Team "Amr &amp; Shehab" Ranked 20th from 670 in Kaggle Cancer Screening Competition</h3>
+                            <div class="time">2017</div>
+                        </div><!--//upper-row-->
+                    </div><!--//meta-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Member of Champions of AUC Embedded Systems Day</h3>
+                            <div class="time">2017</div>
+                        </div><!--//upper-row-->
+                    </div><!--//meta-->
+                </div><!--//item-->
             </section><!--//section-->
