Added section under Extra-Curr

--- a/_includes/extra-curricular-activities.html
+++ b/_includes/extra-curricular-activities.html
@@ -61,7 +61,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">ACM-ECPC Participant</h3>
+                            <h3 class="job-title" style="font-size: 12px;">ACM-ECPC Participant</h3>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
                     </div><!--//meta-->
@@ -69,7 +69,7 @@
 
                 <div class="item">
                     <div class="meta">
-                        <div class="upper-row">
+                        <div class="upper-row" style="font-size: 12px;">
                             <h3 class="job-title">HULT AUC Participant</h3>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
@@ -79,7 +79,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Team "Amr &amp; Shehab" Ranked 20th from 670 in Kaggle Cancer Screening Competition</h3>
+                            <h3 class="job-title" style="font-size: 12px;">Team "Amr &amp; Shehab" Ranked 20th from 670 in Kaggle Cancer Screening Competition</h3>
                             <div class="time">2017</div>
                         </div><!--//upper-row-->
                     </div><!--//meta-->
