Added section under Extra-Curr

--- a/_includes/extra-curricular-activities.html
+++ b/_includes/extra-curricular-activities.html
@@ -69,8 +69,8 @@
 
                 <div class="item">
                     <div class="meta">
-                        <div class="upper-row" style="font-size: 12px;">
-                            <h3 class="job-title">HULT AUC Participant</h3>
+                        <div class="upper-row">
+                            <h3 class="job-title" style="font-size: 12px;">HULT AUC Participant</h3>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
                     </div><!--//meta-->
@@ -88,7 +88,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Member of Champions of AUC Embedded Systems Day</h3>
+                            <h3 class="job-title" style="font-size: 12px;">Member of Champions of AUC Embedded Systems Day</h3>
                             <div class="time">2017</div>
                         </div><!--//upper-row-->
                     </div><!--//meta-->
