Updated experience for now

--- a/_includes/extra-curricular-activities.html
+++ b/_includes/extra-curricular-activities.html
@@ -79,7 +79,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title" style="font-size: 14px;">Team "Amr &amp; Shehab" Ranked 20th from 670 in Kaggle Cancer Screening Competition</h3>
+                            <h3 class="job-title" style="font-size: 14px;">Team "Amr &amp; Shehab" Ranked 24th from 703 in Kaggle Competition in Phase I</h3>
                             <div class="time">2017</div>
                         </div><!--//upper-row-->
                     </div><!--//meta-->
