--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -5,6 +5,18 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Software Engineering Intern</h3>
+                            <div class="time">July 20167 - Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Valeo</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Software Engineering Intern</h3>
                             <div class="time">January 2016 - February 2016</div>
                         </div><!--//upper-row-->
                         <div class="company">Zlabs</div>
