--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -16,7 +16,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Software Engineering Intern</h3>
+                            <h3 class="job-title">Web Development Intern</h3>
                             <div class="time">January 2016 - February 2016</div>
                         </div><!--//upper-row-->
                         <div class="company">Zlabs</div>
