--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -4,8 +4,8 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Software Engineering Intern</h3>
-                            <div class="time">July 20167 - Present</div>
+                            <h3 class="job-title">Software Engineering Intern, Machine Learning</h3>
+                            <div class="time">July 2017 - Present</div>
                         </div><!--//upper-row-->
                         <div class="company">Valeo</div>
                     </div><!--//meta-->
@@ -21,9 +21,6 @@
                         </div><!--//upper-row-->
                         <div class="company">Zlabs</div>
                     </div><!--//meta-->
-                    <div class="details">
-                        <p>Worked on developing UD Dashboard project using PHP, Javascript, and Ajax. Worked on front-end tasks involving graphical data display.</p>
-                    </div><!--//details-->
                 </div><!--//item-->
                 
                 <div class="item">
