Updated projects and skills' bars, need to change projects later

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -4,7 +4,8 @@
     <h4 class="degree">BSc in Computer Engineering. Minor in BA</h4>
     <h5 class="meta">The American University in Cairo (AUC)</h5>
     <div class="time">2012 - 2017 (Expected to graduate)</div>
-</div><!--//item-->
+</div>
+<!--//item-->
 <!-- <div class="item">
     <h4 class="degree">BSc in Applied Mathematics</h4>
     <h5 class="meta">Bristol University</h5>
