--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -10,7 +10,7 @@
                     </div><!--//item-->
                     
                     <div class="item">
-                        <h3 class="level-title">Python</h3>
+                        <h3 class="level-title">Python3</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="95%">
                             </div>                                      
@@ -26,7 +26,7 @@
                     </div><!--//item-->
                     
                     <div class="item">
-                        <h3 class="level-title">Node.JS &amp; Bootstrap frameworks</h3>
+                        <h3 class="level-title">NodeJS, React, &amp; Bootstrap</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="95%">
                             </div>                                      
@@ -34,7 +34,7 @@
                     </div><!--//item-->
                     
                     <div class="item">
-                        <h3 class="level-title">Django framework</h3>
+                        <h3 class="level-title">Django</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="75%">
                             </div>                                      
@@ -66,17 +66,9 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Development Tools; WebStorm, PyCharm, Clion, Visual Studio &amp; Xcode</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
-                            </div>                                      
-                        </div><!--//level-bar-->                                 
-                    </div><!--//item-->
-
-                    <div class="item">
                         <h3 class="level-title">Research &amp; Writing</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
+                            <div class="level-bar-inner" data-level="90%">
                             </div>
                         </div> <!-- //level-bar -->
                     </div><!-- //item -->
