Updated experience section

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -5,7 +5,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Software Engineering Intern, Machine Learning</h3>
-                            <div class="time">July 2017 - Present</div>
+                            <div class="time">July 2017 - September 2017 <strong>[2 mons]</strong></div>
                         </div><!--//upper-row-->
                         <div class="company">Valeo</div>
                     </div><!--//meta-->
@@ -17,7 +17,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Web Development Intern</h3>
-                            <div class="time">January 2016 - February 2016</div>
+                            <div class="time">January 2016 - February 2016 <strong>[1 mon]</strong></div>
                         </div><!--//upper-row-->
                         <div class="company">Zlabs</div>
                     </div><!--//meta-->
@@ -27,7 +27,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Undergraduate Teaching Assistant</h3>
-                            <div class="time">January 2015 - May 2016</div>
+                            <div class="time">January 2015 - May 2016 <strong>[1 year and 4 mons]</strong></div>
                         </div><!--//upper-row-->
                         <div class="company">The American University in Cairo</div>
                     </div><!--//meta-->
