Uploading thesis video

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -36,7 +36,10 @@
                         <p>Assisted in the following courses
                         <ol>
                         <li>CSCE106: Fundamentals of Computer Science (Programming in C++)</li>
+                        <li>CSCE210: Datastructures and Algorithms C++</li>
                         <li>CSCE330: Computer Architecture</li>
+                        <li>CSCE495: Practical Machine Deep Learning</li>
+
                         </ol>
                         </p>  
                         
