--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,9 @@
 
                 <div class="item">
                     <span class="project-title"><a href="#" target="_blank"><strong>Lumen | Thesis Project</strong></a></span> - <span class="project-tagline">A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.</span>
-                    <iframe width="75%" height="75%" src="https://drive.google.com/file/d/0BzF5BeFv5ZRjRkhqV0hacWxxOU0/view?usp=sharing"></iframe>
+                    <video width="400" controls>
+                      <source src="https://drive.google.com/file/d/0BzF5BeFv5ZRjRkhqV0hacWxxOU0/view" type="video/mp4">
+                    </video>
                 </div><!--//item-->
 
                 <div class="item">
